# rust-extensible

./: .travis.yml  Cargo.toml  README.md
examples/: extensible.rs
src/: lib.rs
tests/compile-fail/: extensible.rs  tmphnwtuq  tmprztu90
